Footnotes: Fixed floating numbers in tables on mobile

--- a/source/sass/components/@health/_health-footnotes.scss
+++ b/source/sass/components/@health/_health-footnotes.scss
@@ -1,13 +1,3 @@
-// Footnotes
-//
-// A list of footnotes useful for HTML versions of publications or books.
-//
-// Markup: footnotes.twig
-//
-// Style guide: Components.books.footnotes
-
-
-// List of footnotes.
 .health-footnotes {
   border-top: $health-borderize--very-thin;
   @include AU-space('margin-top', 1.5unit);
@@ -18,17 +8,6 @@
     padding-top: 0;
     margin-top: 0;
   }
-
-  &__footnote {
-
-    @include AU-space('padding-left', 3unit);
-    &-number {
-      position: absolute;
-      @include AU-space('margin-left', -3unit);
-    }
-  }
-
-
 }
 
 // Link to the footnote.
